make the easier of nat's suggestions

--- a/quillen.tex
+++ b/quillen.tex
@@ -326,7 +326,7 @@ We define the following variants of ``stable divisor schemes'':
 \noindent The first of these constructions is very suggestive: it looks like the free commutative monoid formed on a set, and we might hope that the construction in formal schemes enjoys a similar universal property.  In fact, all three constructions have universal properties:
 
 \begin{theorem}[{cf.\ \Cref{FreeFormalGroupOnACurve}}]\label{DivConstructionsAreFree}
-The scheme \(\Div^+ C\) models the free formal monoid on the unpointed formal curve \(C\).  The scheme \(\Div C\) models the free formal group on the unpointed formal curve \(C\).  The scheme \(\Div_0 C\) \emph{simultaneously} models the free formal monoid and the free formal group on the \emph{pointed} formal curve \(C\). \qed
+The scheme \(\Div^+ C\) models the free formal commutative monoid on the unpointed formal curve \(C\).  The scheme \(\Div C\) models the free formal group on the unpointed formal curve \(C\).  The scheme \(\Div_0 C\) \emph{simultaneously} models the free formal commutative monoid and the free formal group on the \emph{pointed} formal curve \(C\). \qed
 \end{theorem}
 \noindent We will postpone the proof of this Theorem until later, once we've developed a theory of coalgebraic formal schemes.
 
