--- a/sigma.tex
+++ b/sigma.tex
@@ -2,7 +2,7 @@
 
 \chapter{The \texorpdfstring{\(\sigma\)}{sigma}-orientation}\label{ChapterSigmaOrientation}
 
-By this point, we have seen a great many ways that algebraic geometry exerts control over the behavior of homotopy theory, stable and unstable.  The goal in this Case Study is to explore a setting where algebraic geometry is itself tightly controlled: whereas the behavior of formal groups is quite open-ended, the behavior of \emph{abelian varieties} is comparatively strict.  We import this strictness into algebraic topology by stiudying complex-orientable cohomology theories \(E\) which have been tagged with an auxiliary abelian variety \(A\) and an isomorphism \(\phi\co \CP^\infty_E \cong A^\wedge_0\).  In the case that \(A\) is an elliptic curve, this is our definition of an \textit{elliptic cohomology theory}.  The idea, then, is not that this puts serious constraints on the formal group \(\CP^\infty_E\) (although it does place some), but rather that the theory of abelian varieties endows \(A\), and hence \(A^\wedge_0\), with various bits of preferred data.  This is the tack we take to construct a \emph{canonical} \(MU[6, \infty)\)--orientation of \(E\): for any complex-orientable \(E\), we identify the collection of such ring maps with ``\(\Theta\)--structures on \(\CP^\infty_E\)''; a basic theorem about abelian varieties endows the elliptic curve \(A\) with a canonical such structure; and altogether this yields the desired orientation for an elliptic spectrum.
+By this point, we have seen a great many ways that algebraic geometry exerts control over the behavior of homotopy theory, stable and unstable.  The goal in this Case Study is to explore a setting where algebraic geometry is itself tightly controlled: whereas the behavior of formal groups is quite open-ended, the behavior of \emph{abelian varieties} is comparatively strict.  We import this strictness into algebraic topology by studying complex-orientable cohomology theories \(E\) which have been tagged with an auxiliary abelian variety \(A\) and an isomorphism \(\phi\co \CP^\infty_E \cong A^\wedge_0\).  In the case that \(A\) is an elliptic curve, this is our definition of an \textit{elliptic cohomology theory}.  The idea, then, is not that this puts serious constraints on the formal group \(\CP^\infty_E\) (although it does place some), but rather that the theory of abelian varieties endows \(A\), and hence \(A^\wedge_0\), with various bits of preferred data.  This is the tack we take to construct a \emph{canonical} \(MU[6, \infty)\)--orientation of \(E\): for any complex-orientable \(E\), we identify the collection of such ring maps with ``\(\Theta\)--structures on \(\CP^\infty_E\)''; a basic theorem about abelian varieties endows the elliptic curve \(A\) with a canonical such structure; and altogether this yields the desired orientation for an elliptic spectrum.
 
 Making the identification of \(MU[6, \infty)\)--orientations with \(\Theta\)--structures requires real work, but many of the stepping stones are now in place.  We begin with a technical section about especially nice formal schemes, called \textit{coalgebraic}, and we use this to finally give the proof, announced back in \Cref{DivConstructionsAreFree}, that the scheme of stable Weil divisors on a formal curve presents the free formal group on that curve.  With that out of the way and with \(MU[6, \infty)\) in mind as the eventual goal, we then summarize the behavior of the part of the Postnikov tower for complex bordism that we \emph{do} understand---the cases of \(MUP\) and \(MU\)---and use this to make an analysis of \(M\SU\).  In particular, we rely heavily on the results from \Cref{ComplexBordismChapter} and \Cref{ChapterFiniteSpectra} to understand the co/homological behaviors of \(BU \times \Z\), \(BU\), \(MUP\), and \(MU\).
 
@@ -22,9 +22,9 @@ We also give a short r\'esum\'e on the theory of elliptic curves in \Cref{Sectio
 
 \section{Coalgebraic formal schemes}
 
-We will now finally address an elephant that has been lingering in our metaphorical room: in the first third of this book we were primarily interested in the formal scheme associated to the \emph{cohomology} of a space, but in the second third we were primarily interested in a construction converting the \emph{homology} of a spectrum to a sheaf over a context.  Our goal for this Lecture is to, when possible, put these two variances on even footing.  Our motivation for putting this lingering discrepancy to rest is more technical than aesthetic: we have previously wanted access to certain colimits of formal schemes (e.g., in \Cref{DivConstructionsAreFree}).  While such colimits are generally forbidding, similarly to colimits of manifolds, we will in effect produce certain conditions under which they are accessible.
+We will now finally address a point that we have long let slide: in the first third of this book we were primarily interested in the formal scheme associated to the \emph{cohomology} of a space, but in the second third we were primarily interested in a construction converting the \emph{homology} of a spectrum to a sheaf over a context.  Our goal for this Lecture is to, when possible, put these two variances on even footing.  Our motivation for putting this lingering discrepancy to rest is more technical than aesthetic: we have previously wanted access to certain colimits of formal schemes (e.g., in \Cref{DivConstructionsAreFree}).  While such colimits are generally forbidding, similarly to colimits of manifolds, we will in effect produce certain conditions under which they are accessible.
 
-For \(E\) a ring spectrum and \(X\) a space, the diagonal map \(\Delta\co X \to X \times X\) induces a multiplication map on \(E\)--cohomology via the composite \[E^* X \otimes_{E^*} E^* X \xrightarrow{\text{K\"unneth}} E^*(X \times X) \xrightarrow{E^* \Delta} E^* X.\]  Dually, applying \(E\)--homology, we have a pair of maps \[E_* X \xrightarrow{E_* \Delta} E_*(X \times X) \xleftarrow{\text{K\"unneth}} E_* X \otimes_{E_*} E_* X,\] where, remarkably, the K\"unneth map goes the wrong way to form a composite.  In the case that that map is an isomorphism, the long composite induces the structure of an \index{comodule!coalgebra}\(E_*\)--coalgebra on \(E_* X\).  In the most generous case that \(E\) is a field spectrum (in the sense of \Cref{FieldSpectraAreKTheories}), the K\"unneth map is always invertible and, moreover, \(E^* X\) is functorially the linear dual of \(E_* X\).  This motivates us to consider the following purely algebraic construction:
+For \(E\) a ring spectrum and \(X\) a space, the diagonal map \(\Delta\co X \to X \times X\) induces a multiplication map on \(E\)--cohomology via the composite \[E^* X \otimes_{E^*} E^* X \xrightarrow{\text{K\"unneth}} E^*(X \times X) \xrightarrow{E^* \Delta} E^* X.\]  Dually, applying \(E\)--homology, we have a pair of maps \[E_* X \xrightarrow{E_* \Delta} E_*(X \times X) \xleftarrow{\text{K\"unneth}} E_* X \otimes_{E_*} E_* X,\] where, remarkably, the K\"unneth map goes the wrong way to form a composite.  In the case where that map is an isomorphism, the long composite induces the structure of an \index{comodule!coalgebra}\(E_*\)--coalgebra on \(E_* X\).  In the most generous case that \(E\) is a field spectrum (in the sense of \Cref{FieldSpectraAreKTheories}), the K\"unneth map is always invertible and, moreover, \(E^* X\) is functorially the linear dual of \(E_* X\).  This motivates us to consider the following purely algebraic construction:
 
 \begin{definition}
 Let \(C\) be a coalgebra over a field \(k\).  We define a functor\index{scheme!coalgebraic!Sch@\(\Sch\)}
@@ -58,7 +58,7 @@ For \(C\) a coalgebra over a field \(k\) expressed as a colimit \(C = \colim_k C
 
 This covariant algebraic model for formal schemes is very useful.  For instance, this equivalence makes the following calculation trivial:
 \begin{lemma}[{cf.\ \Cref{HF2BOIsSymAlg}, \Cref{DivConstructionsAreFree}, and \Cref{ECohomBUIsFree}}]
-Select a coalgebra \(C\) over a field \(k\) together with a pointing \(k \to C\).  Write \(M\) for the coideal \(M = C / k\).  The free formal monoid on the pointed formal scheme \(\Sch k \to \Sch C\) is given by \[F(\Sch k \to \Sch C) = \Sch \Sym^* M.\]  Writing \(\Delta c = \sum_j \ell_j \otimes r_j\) for the diagonal on \(C\), the diagonal on \(\Sym^* C\) is given by
+Select a coalgebra \(C\) over a field \(k\) together with a pointing \(k \to C\).  Write \(M\) for the coideal \(M = C / k\).  The free formal commutative monoid on the pointed formal scheme \(\Sch k \to \Sch C\) is given by \[F(\Sch k \to \Sch C) = \Sch \Sym^* M.\]  Writing \(\Delta c = \sum_j \ell_j \otimes r_j\) for the diagonal on \(C\), the diagonal on \(\Sym^* C\) is given by
 \[\pushQED{\qed}
 \Delta(c_1 \cdots c_n) = \sum_{j_1, \ldots, j_n} (\ell_{1,j_1} \cdots \ell_{n, j_n}) \otimes (r_{1, j_1} \cdots r_{n, j_n}). \qedhere
 \popQED\]
@@ -83,15 +83,15 @@ Suppose that \[F\co \CatOf I \to \CatOf{Coalgebras}_R\] is a colimit diagram of 
 \noindent For an example of the sort of constructions that become available via this Theorem, we prove the following Corollary by analyzing the symmetric power of coalgebras:
 
 \begin{corollary}[{\cite[Example 4.65 and Proposition 6.4]{StricklandFSFG}}]\label{ProofOfFreeFormalMonoids}
-When a formal scheme \(X\) is coalgebraic, the symmetric power \(X^{\times n}_{\Sigma_n}\) exists.  In fact, \(\coprod_{n \ge 0} X^{\times n}_{\Sigma n}\) models the free formal monoid on \(X\).  Given an additional pointing \(\Spec R \to X\), the colimit of the induced system \[\colim \left(\cdots \to X^{\times n}_{\Sigma_n} = \Spec R \times X^{\times n}_{\Sigma_n} \to X \times X^{\times n}_{\Sigma_n} \to X^{\times(n+1)}_{\Sigma_{n+1}} \to \cdots\right)\] models the free formal monoid on the pointed formal scheme.
+When a formal scheme \(X\) is coalgebraic, the symmetric power \(X^{\times n}_{\Sigma_n}\) exists.  In fact, \(\coprod_{n \ge 0} X^{\times n}_{\Sigma n}\) models the free formal commutative monoid on \(X\).  Given an additional pointing \(\Spec R \to X\), the colimit of the induced system \[\colim \left(\cdots \to X^{\times n}_{\Sigma_n} = \Spec R \times X^{\times n}_{\Sigma_n} \to X \times X^{\times n}_{\Sigma_n} \to X^{\times(n+1)}_{\Sigma_{n+1}} \to \cdots\right)\] models the free formal commutative monoid on the pointed formal scheme.
 \end{corollary}
 \begin{proof}[Proof sketch]
-The main points entirely mirror the case over a field: the symmetric power construction gives models for \(X^{\times n}_{\Sigma_n}\), the symmetric algebra construction gives a model for the free formal monoid, and the stabilization against the pointing is modeled by inverting an element in the symmetric algebra.  In each case, choosing a good basis for the coalgebra underlying \(X\) yields choices of good bases for the coalgebras arising from these constructions, essentially because their elements are crafted out of finite combinations of the elements of the original.
+The main points entirely mirror the case over a field: the symmetric power construction gives models for \(X^{\times n}_{\Sigma_n}\), the symmetric algebra construction gives a model for the free formal commutative monoid, and the stabilization against the pointing is modeled by inverting an element in the symmetric algebra.  In each case, choosing a good basis for the coalgebra underlying \(X\) yields choices of good bases for the coalgebras arising from these constructions, essentially because their elements are crafted out of finite combinations of the elements of the original.
 \end{proof}
 
 In the specific case that \(\Spec R \to X\) is a pointed formal \emph{curve}, we can prove something more:
 \begin{corollary}[{\cite[Proposition 6.12]{StricklandFSFG}}]\label{FreeFormalGroupOnACurve}
-For \(\Spec R \to X\) a pointed formal curve, the free formal monoid is automatically an abelian group.
+For \(\Spec R \to X\) a pointed formal curve, the free formal commutative monoid is automatically an abelian group.
 \end{corollary}
 \begin{proof}[Proof sketch]
 The main idea is that the coalgebra associated to a formal curve admits an increasing filtration \(F_k\) so that the reduced diagonal \(\overline \Delta = \Delta - (1 \otimes \eta) - (\eta \otimes 1)\) reduces filtration degree: \[\overline \Delta|_{F_k}\co F_k \to \sum_{\substack{i,j > 0 \\ i+j=k}} F_i \otimes F_j.\]  In turn, the symmetric algebra on the coalgebra associated to a formal curve inherits enough of this filtration that one can iteratively solve for a \index{Hopf algebra}Hopf algebra antipode.
@@ -100,10 +100,10 @@ The main idea is that the coalgebra associated to a formal curve admits an incre
 We now reconnect this algebraic discussion with the algebraic topology that spurred it.
 
 \begin{lemma}
-If \(E\) and \(X\) are such that \(E_* X\) is an \(E_*\)--coalgebra and \[E^* X = \CatOf{Modules}_{E_*}(E_* X, E_*),\] then there is an equivalence \[\Sch E_* X \cong X_E.\]
+If \(E\) and \(X\) are such that \(E_* X\) is an \(E_*\)--coalgebra and \[E^* X \cong \CatOf{Modules}_{E_*}(E_* X, E_*),\] then there is an equivalence \[\Sch E_* X \cong X_E.\]
 \end{lemma}
 \begin{proof}
-We have defined \(X_E\) to have formal topology induced by the compactly generated topology of \(X\), and this same topology can also be used to write \(\Sch E_* X\) as the colimit of finite \(E_*\)--coalgebras.
+We have defined \(X_E\) to have the formal topology induced by the compactly generated topology of \(X\), and this same topology can also be used to write \(\Sch E_* X\) as the colimit of finite \(E_*\)--coalgebras.
 \end{proof}
 
 \begin{example}[{cf.\ \Cref{KtheoryConvertsTorsionToTorsion} and \Cref{KHomologyOfClassifyingSpace}}]\label{KtheoryOfClassifyingSpace}
@@ -213,7 +213,7 @@ f(t) \arrow[|->]{r} & f(t) / f(0).
 \end{tikzcd}
 \end{center}
 
-At the level of Thom spectra, these identifications are controlled by the \index{Chern class}Chern classes associated to these bundles, and we now briefly summarize their relationship.  The spaces \(\Z \times BU\) and \(BU\) are the \(0\){\th} and \(2\){\nd} spaces in the \(\Omega\)--spectrum for connective complex \(K\)--theory, and since connective complex \(K\)--theory is complex-orientable, we have \(kU^*(\CP^\infty) = \Z[\beta]\ps{c_1}\).  Inside this ring there is the relation \[\beta c_1 = (1 - \L).\]  Recognizing \(\beta\) as the restriction of the tautological bundle on \(\CP^\infty\) to \(S^2 \simeq \CP^1\) and employing \Cref{Pi2AndInvariantDiffls}, this says that the trivialization \(f\) of \(\ThomSheaf{u^* \L}\), corresponding to a point in \((\Spec E_0 MUP)(T)\) and whose theory of Chern classes is governed by the image of the element \[(1 - \L) \in kU^0(\CP^\infty) = [\CP^\infty, \Z \times BU],\] is sent to the trivialization \(f'(0) / f\) of \(\ThomSheaf{u^*(1 - \L)}\), corresponding to the induced point in \((\Spec E_0 MU)(T)\) and whose theory of Chern classes is governed by the image of the element \[c_1 \in kU^2(\CP^\infty) = [\CP^\infty, BU].\]
+At the level of Thom spectra, these identifications are controlled by the \index{Chern class}Chern classes associated to these bundles, and we now briefly summarize their relationship.  The spaces \(\Z \times BU\) and \(BU\) are the \(0\){\th} and \(2\){\nd} spaces in the \(\Omega\)--spectrum for connective complex \(K\)--theory, and since connective complex \(K\)--theory is complex-orientable, we have \(kU^*(\CP^\infty) = \Z[\beta]\ps{c_1}\).  Inside this ring there is the relation \[\beta c_1 = (1 - \L).\]  The pieces of this topological formula have recognizable provenances: \(\beta\) is the restriction of the tautological bundle on \(\CP^\infty\) to \(S^2 \simeq \CP^1\), \((1 - \L)\) governs the theory of Chern classes for an \(MUP\)--orientation, and \(c_1\) governs the theory of Chern classes for an \(MU\)--orientation.  Applying our conversions to algebro-geometric terms (i.e., the Theorems above as well as \Cref{Pi2AndInvariantDiffls}), this same equation says that the trivialization \(f\) of \(\ThomSheaf{u^* \L}\), corresponding to a point in \((\Spec E_0 MUP)(T)\), is sent to the trivialization \(f'(0) / f\) of \(\ThomSheaf{u^*(1 - \L)}\), corresponding to the induced point in \((\Spec E_0 MU)(T)\).
 \end{remark}
 
 
@@ -249,7 +249,7 @@ There is an equivalence of \(\SU\)--bundles \[(1 - 1)(\L_2 - 1) \cong 0.\]  Corr
 \end{example}
 
 \begin{example}\label{TwoCocycleConditionForBSUBundles}
-There is another less obvious symmetry, inspired by our use of the product map \[kU^2(Y) \otimes kU^2(Y) \to kU^4(Y)\] in the course of the proof.  There is also a product map \[kU^2(Y) \otimes kU^0(Y) \times kU^2(Y) \to kU^4(Y).\]  Taking one of our splitting summands \((1 - \L_1)(1 - \L_2)\) and acting by some line bundle \(\sheaf H \in kU^0(Y)\) gives
+There is another less obvious symmetry, inspired by our use of the product map \[kU^2(Y) \otimes kU^2(Y) \to kU^4(Y)\] in the course of the proof.  There is also a product map \[kU^2(Y) \otimes kU^0(Y) \times kU^2(Y) \to kU^4(Y).\]  Taking one of our splitting summands \((1 - \L_1)(1 - \L_2)\) and acting by some a bundle \(\sheaf H \in kU^0(Y)\) gives
 \begin{align*}
 (1 - \L_1)\sheaf H(1 - \L_2) & = (1 - \L_1)\sheaf H(1 - \L_2) \\
 (\sheaf H - \L_1 \sheaf H)(1 - \L_2) & = (1 - \L_1)(\sheaf H - \sheaf H \L_2) \\
