--- a/powerops.tex
+++ b/powerops.tex
@@ -4,6 +4,10 @@
 
 \chapter{Power Operations}\label{PowerOpnsChapter}
 
+\begin{center}
+\textbf{Convention: We will write \(E\) for \(E_\Gamma\), \(\Gamma\) a fixed formal group of finite height, for the entirety of this Appendix.}
+\end{center}
+
 Our goal in this Appendix is to give a tour of the interaction of the \(\sigma\)--orientation with a topic of modern research, the theory of \index{E infty ring spectrum@\(E_\infty\)--ring spectrum}\(E_\infty\)--ring spectra, in a manner consistent with the rest of the topics in this book.  Because the theory of \(E_\infty\)--ring spectra (in particular: their algebraic geometry) is still very much developing, we have no hope of stating results in their maximum strength or giving a completely clear picture---as of this writing, the maximum strength is unknown and the picture is still resolving.  Although \(E_\infty\)--ring spectra themselves were introduced decades ago, we will even avoid giving a proper definition of them here, instead referring to the original work of May and collaborators~\cite{EKMM} and the more recent work of Lurie~\cite[Chapter 7]{LurieHA} for a proper treatment.  In acknowledgement of this underwhelming level of rigor, we have downgraded our discussion from a Case Study to an Appendix.
 
 As far as we are concerned, \(E_\infty\)--ring spectra arise in order to solve the following problem: given two ring spectra \(R\) and \(S\) in the homotopy category, the set of homotopy classes of ring maps \(\CatOf{RingSpectra}(R, S)\) forms a subset of the set of all homotopy classes \([R, S] = \pi_0 \CatOf{Spectra}(R, S)\), selected by a homomorphism condition.  There is no meaningful way to enrich this to a \emph{space} of ring spectrum maps from \(R\) to \(S\), which inhibits us from understanding an obstruction theory for ring spectra, i.e., approximating \(R\) by ``nearby'' ring spectra \(R'\) in a way that relates \(\CatOf{RingSpectra}(R, S)\) and \(\CatOf{RingSpectra}(R', S)\) by a fiber sequence.\index{obstruction theory}
@@ -61,7 +65,7 @@ An orientation \(MU[6, \infty) \to E_\Gamma\) is \(H_\infty\) if and only if the
 
 \section{Rational chromatic phenomena (Nathaniel Stapleton)}\label{CharacterTheorySection}
 
-Before embarking on the rather ambitious project of understanding the collection of \(H_\infty\) ring maps \(\phi\co MU[6, \infty) \to E_\Gamma\), it would be instructive to be able to answer the following: if we had such an orientation, would data could we extract from it?  The main feature of such a map is that it belongs to a commutative diagram
+Before embarking on the rather ambitious project of understanding the collection of \(H_\infty\)--ring maps \(\phi\co MU[6, \infty) \to E_\Gamma\), it would be instructive to be able to answer the following: if we had such an orientation, would data could we extract from it?  The main feature of such a map is that it belongs to a commutative diagram
 \begin{center}
 \begin{tikzcd}
 MU[6, \infty)^0(X) \arrow["\phi"]{r} \arrow["P_{\Sigma_n}^{MU[6, \infty)}(X)"]{d} & E^0(X) \arrow["P_{\Sigma_n}^E(X)"]{d} \\
@@ -137,7 +141,7 @@ We thus set out to understand the formal schemes constituting the \(E_\infty\) c
 \end{itemize}
 
 \begin{definition}
-Accordingly, we set the \index{context!natural Einfty@natural \(E_\infty\)}\textit{natural \(E_\infty\) context} to be \[\Econtext{E_\Gamma} = \SpH E^0 B\Sigma_*.\]
+Accordingly, we set the \index{context!natural Einfty@natural \(E_\infty\)}\textit{natural \(E_\infty\) context} to be \[\Econtext{E_\Gamma} = \SpH E^0 \mmod \SpH E^0 B\Sigma_*.\]
 \end{definition}
 
 The effect of this functor on classical rings is given by \Cref{HopfRingsAndRingsAdjunction}: \(\Econtext{E_\Gamma}(T) = \CatOf{Algebras}_{E_\Gamma^0}(Q^* E^0 B\Sigma_*, T)\), where \[Q^* E^0 B\Sigma_* = \frac{E^0 B\Sigma_*}{\im\left(\Tr_{\Sigma_{*_1} \times \Sigma_{*_2}}^{\Sigma_{*_1 + *_2}}\co E^0 B\Sigma_{*_1} \times E^0 B\Sigma_{*_2} \to E^0 B\Sigma_{*_1 + *_2}\right)}.\]  The ideal appearing in this equation is called the \index{norm}\index{transfer|see {norm, equivariant}}\textit{transfer ideal}, written \(I_{\Tr}\).
@@ -183,7 +187,7 @@ The \index{context!abelian Einfty@abelian \(E_\infty\)}\textit{abelian \(E_\inft
 There is an isomorphism \[\Spf E^0 B\Sigma_j / I_{\Tr} \cong \Sub_j \CP^\infty_E,\] where \(\Sub_j\) denotes the subscheme of \(\Div_j^+\) consisting of those effective Weil divisors of rank \(j\) which are \index{divisor!subgroup}subgroup divisors.\footnote{If \(j\) is not a power of \(p\), this is the terminal scheme.}
 \end{theorem}
 \begin{proof}[Proof sketch, after Stapleton]
-The proof of this Theorem requires a very involved algebraic calculation (which can take different forms~\cite{StricklandFiniteSubgps,SchlankStapleton}), so we describe only the reduction to that calculation.  The object \(E^0 B\Sigma_j\) is accessible via the chromatic character theory from the previous Lecture, where we presented \(C_0 \otimes E^0 B\Sigma_j\) as a certain ring of \(C_0\)--valued class functions on the symmetric group.  The effect of quotienting by the transfer ideal is to delete all of the factors belonging to conjugacy classes that are not transitive.  On other side of the putative isomorphism, the formation of the scheme of subgroups commutes with base change, and hence we have \[\Spec C_0 \times \Sub_j \CP^\infty_E \cong \Sub_j (\Spec C_0 \times \CP^\infty_E) \cong \Sub_j \Lambda^*,\] where in the second isomorphism we have used the canonical isomorphism carried by the ring $C_0$.  After this character-theoretic base-change, there is a canonical bijection between the two sides: a map \[\Z_p^n \xrightarrow{\mathrm{transitive}} \Sigma_n\] has an image factorization \(\Z_p^n \to A \to \Sigma_n\), and the Pontryagin dual of the surjective map in the factorization gives an injective map \[\Lambda^* \leftarrow A^*.\]
+The proof of this Theorem requires a very involved algebraic calculation (which can take different forms~\cite{StricklandFiniteSubgps,SchlankStapleton}), so we describe only the reduction to that calculation.  The object \(E^0 B\Sigma_j\) is accessible via the chromatic character theory from the previous Lecture, where we presented \(C_0 \otimes E^0 B\Sigma_j\) as a certain ring of \(C_0\)--valued class functions on the symmetric group.  The effect of quotienting by the transfer ideal is to delete all of the factors belonging to conjugacy classes that are not transitive.  On the other side of the putative isomorphism, the formation of the scheme of subgroups commutes with base change, and hence we have \[\Spec C_0 \times \Sub_j \CP^\infty_E \cong \Sub_j (\Spec C_0 \times \CP^\infty_E) \cong \Sub_j \Lambda^*,\] where in the second isomorphism we have used the canonical isomorphism carried by the ring $C_0$.  After this character-theoretic base-change, there is a canonical bijection between the two sides: a map \[\Z_p^n \xrightarrow{\mathrm{transitive}} \Sigma_n\] has an image factorization \(\Z_p^n \to A \to \Sigma_n\), and the Pontryagin dual of the surjective map in the factorization gives an injective map \[\Lambda^* \leftarrow A^*.\]
 
 As described above, the permutation representation gives a natural map \(B\Sigma_j \to BU(j)\), which participates in the following square:
 \begin{center}
@@ -192,7 +196,7 @@ E^0 BU(j) \arrow{r} \arrow["\simeq"]{d} & E^0 B\Sigma_j / I_{\Tr} \arrow["\mathr
 \sheaf O(\Div_j^+ \CP^\infty_E) \arrow["\mathrm{surj.}"]{r} & \sheaf O(\Sub_j \CP^\infty_E) \arrow["\mathrm{inj.}"]{r} \arrow[densely dotted]{u} & \sheaf O(\Sub_j \Lambda^*).
 \end{tikzcd}
 \end{center}
-The left-hand isomorphism is stated in \Cref{IdentificationOfBUnWithDivn}; the right-hand isomorphism is the content of the previous paragraph; the top-left horizontal map is surjective because subgroup divisors form a closed subscheme of all divisors; and \Cref{CZeroIsFaithfullyFlat} shows that the two right-hand horizontal maps are injections.  Altogether, these can be used to define the middle vertical map: any element can be preimaged along the surjection, pulled upward along the isomorphism, and pushed back down along the map induced by the regular representation, and one quickly checks that this gives an injective $E^0$--algebra homomorphism.
+The left-hand isomorphism is stated in \Cref{IdentificationOfBUnWithDivn}; the right-hand isomorphism is the content of the previous paragraph; the bottom-left horizontal map is surjective because subgroup divisors form a closed subscheme of all divisors; and \Cref{CZeroIsFaithfullyFlat} shows that the two right-hand horizontal maps are injections.  Altogether, these can be used to define the middle vertical map: any element can be preimaged along the surjection, pulled upward along the isomorphism, and pushed back down along the map induced by the regular representation, and one quickly checks that this gives an injective $E^0$--algebra homomorphism.
 
 What remains to show, then, are that the source and target are finite and free of the same rank, and that the resulting determinant is a unit.  These are formidible tasks in both algebraic geometry and algebraic topology.
 \end{proof}
@@ -207,7 +211,7 @@ For a finite abelian group \(A\), there is a diagram
 \Level(A^*, \CP^\infty_E) \arrow{rr} & & \InternalHom{FormalGroups}(A^*, \CP^\infty_E),
 \end{tikzcd}
 \end{center}
-where \index{level structure}\(\Level(A^*, \CP^\infty_E)\) denotes the subscheme of \(\InternalHom{FormalGroups}(A^*, \CP^\infty_E)\) subject to the condition that \(A^*[n]\) forms a subdivisor of \(\CP^\infty_E[n]\).\footnote{If \(A[p] \cong (\Z/p)^{\times k}\) has \(k > \height{\Gamma}\), then this is the terminal scheme.} \qed
+where \index{level structure}\(\Level(A^*, \CP^\infty_E)\) denotes the subscheme of \(\InternalHom{FormalGroups}(A^*, \CP^\infty_E)\) consisting of homomorphisms which are subject to the condition that \(A^*[n]\) forms a subdivisor of \(\CP^\infty_E[n]\).\footnote{If \(A[p] \cong (\Z/p)^{\times k}\) has \(k > \height{\Gamma}\), then this is the terminal scheme.} \qed
 \end{theorem}
 
 \begin{remark}
