fix errant period after Theorem statements

--- a/preamble.tex
+++ b/preamble.tex
@@ -327,18 +327,19 @@
 % \numberwithin{equation}{section}
 
 \theoremstyle{plain}
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{conjecture}[theorem]{Conjecture}
+\newtheorem{dummy}{Dummy}[section]
+\newtheorem{theorem}[dummy]{Theorem}
+\newtheorem{proposition}[dummy]{Proposition}
+\newtheorem{lemma}[dummy]{Lemma}
+\newtheorem{corollary}[dummy]{Corollary}
+\newtheorem{conjecture}[dummy]{Conjecture}
 \theoremstyle{definition}
-\newtheorem{definition}[theorem]{Definition}
-\newtheorem{construction}[theorem]{Construction}
-\newtheorem{warning}[theorem]{Important Warning}
+\newtheorem{definition}[dummy]{Definition}
+\newtheorem{construction}[dummy]{Construction}
+\newtheorem{warning}[dummy]{Important Warning}
 \theoremstyle{remark}
-\newtheorem{remark}[theorem]{Remark}
-\newtheorem{example}[theorem]{Example}
+\newtheorem{remark}[dummy]{Remark}
+\newtheorem{example}[dummy]{Example}
 
 % sseqpages definitions
 
