more corrections by Nat

--- a/characters.tex
+++ b/characters.tex
@@ -111,7 +111,7 @@ and that the \(p\)--divisible group associated to \(\G\) can be formed using the
 %\]
 \Cref{app:cyclic} also implies that all of the schemes in this system are finite flat commutative groups schemes over \(\Spf E^0\). The \(p\)--divisible group is called ``height \(d\)'' because \(\G[p]\) is a finite group scheme of order \(p^d\) or, equivalently, since \(E^0(BC_p)\) has rank \(p^d\) as a free module over \(E^0\).
 
-There are \(p\)--divisible groups that are \emph{not} built from formal groups, and the simplest of these plays a role in this story. We define the \textit{constant \(p\)--divisible group of height \(1\)} to be 
+There are \(p\)--divisible groups that are \emph{not} built from formal groups, and the simplest of these plays a role in this story. \todo{Mention that the $p$--divisible group base-changed to a rational algebra is automatically \'etale, and that the constant $p$--divisible group is the only canonical \'etale group we know.} We define the \textit{constant \(p\)--divisible group of height \(1\)} to be 
 \[
 C_{p^{\infty}} = S^1[p^\infty] = \colim \big ( C_p \hookrightarrow C_{p^2} \hookrightarrow \ldots \big ).
 \]
@@ -627,7 +627,7 @@ Given a pair of cohomology theories \(E\) and \(F\) as well as a map of cohomolo
 \[
 g \colon E_{G}^*(-) \rightarrow F_{G}^{*}(-)
 \]
-is an isomorphism if and only if it is an isomorphism on spaces of the form \(G/H\). These spaces are the generalization of the point to \(G\)--spaces. The purpose of complex oriented descent is to give conditions on Borel equivariant cohomology theories \(E\) and \(F\) so that a map \(g\) is an isomorphism if and only if it is an isomorphism on all spaces of the form \(G/A\), where \(A \subseteq G\) is abelian. The idea is that certain equivariant cohomology theories have the property that, for a \(G\)-CW complex \(X\), \(E_{G}^*(X)\) can be recovered from \(E_{G}^*(F)\) for a certain space \(F\) with the property that the cells of \(F\) are all of the form \(G/A \times D^n\).
+is an isomorphism if and only if it is an isomorphism on spaces of the form \(G/H\). These spaces are the generalization of the point to \(G\)--spaces. \todo{How true is this, really? Do you also need conditions on the coefficients of \(E\), for instance?}The purpose of complex oriented descent is to give conditions on Borel equivariant cohomology theories \(E\) and \(F\) so that a map \(g\) is an isomorphism if and only if it is an isomorphism on all spaces of the form \(G/A\), where \(A \subseteq G\) is abelian. The idea is that certain equivariant cohomology theories have the property that, for a \(G\)-CW complex \(X\), \(E_{G}^*(X)\) can be recovered from \(E_{G}^*(F)\) for a certain space \(F\) with the property that the cells of \(F\) are all of the form \(G/A \times D^n\).
 
 In the cases that we are interested in, the space \(F\) will be the bundle of complete flags associated to a vector bundle on \(X\). Let \(f \colon V \rightarrow X\) be an \(m\)-dimensional complex vector bundle. Associated to \(V\) is a space \(\Flag(V)\) over \(X\) such that the fiber over \(x \in X\) is the space of sequences of inclusions
 \[
@@ -897,7 +897,7 @@ When \(n=1\) and \(X = *\) the character map produces a \(p\)--complete version 
 \[
 K_{p}^{0}(BG) \xrightarrow{} \mathrm{Cl}(G_{p}^{1}, C_0),
 \]
-where \(C_0\) is the maximal ramified extension of \(\Q_p\) discussed in \Cref{padicktheory}. This map is injective. Above height \(1\), though, this is not generally true~\cite{Kriz}.
+where \(C_0\) is the maximal ramified extension of \(\Q_p\) discussed in \Cref{padicktheory}.  This map is injective.  Above height \(1\), though, this is not generally true~\cite{Kriz}, but it \emph{is} true for $G = \Sigma_n$~\cite[Theorem 7.3]{HKR}, which is enough to conclude that $E^0 B\Sigma_n$ is free of finite rank.\todo{Did I get this right?}
 \end{example}
 
 \begin{remark}
@@ -943,7 +943,7 @@ It turns out that \(C_0\) is an \(\mathrm{Aut}(\Lambda)\)-Galois extension of \(
 \begin{proposition}[{\cite[Corollary 6.8.iii]{HKR}}]
 There is an isomorphism
 \[
-C_{0}^{\mathrm{Aut}(\Lambda)} \cong \Q \otimes E^0.
+C_{0}^{\mathrm{Aut}(\Lambda)} \cong \Q \otimes E^0. \pushQED\qed \qedhere \popQED
 \]
 \end{proposition}
 
