mention 512 notes / X(4) and Y(4)

--- a/powerops.tex
+++ b/powerops.tex
@@ -668,7 +668,7 @@ C[p]\arrow{r} & C \arrow["p"]{r} & C^{(p)}
 \end{tikzcd}
 \right).
 \]
-Unfortunately, this \(\theta\)--algebra is not nice enough to apply the Goerss--Hopkins--Miller theorem.  In order to fix this, it becomes convenient to work at \(p \ge 5\) for simplicity, and we then pass to a slightly more rigid moduli: we introduce a \index{level structure!formal}formal \((\Z/p)\)--level structure, i.e., an isomorphism \(\Z/p \cong (\widehat C)[p]\).  This \'etale \((\Z/p)^\times\)--cover of \(\moduli{ell}^{\ord}\), known as the first \index{Igusa tower}Igusa cover, has the following exceptional property:
+Unfortunately, this \(\theta\)--algebra is not nice enough to apply the Goerss--Hopkins--Miller theorem.  In order to fix this, it becomes convenient to work at \(p \ge 5\) for simplicity, and we then pass to a slightly more rigid moduli: we introduce a \index{level structure!formal}formal \((\Z/p)\)--level structure, i.e., an isomorphism \(\Z/p \cong (\widehat C)[p]\).\footnote{This partial rigidification of the formal component of the elliptic curve is related to the observations of Hopkins on the connection between homology and stacky pullbacks mentioned in \Cref{RemovingStackinessFromSpectra}~\cite[Section 3.1]{HopkinsFromSpectraToStacks}, \cite[Section 12]{Rezk512Notes}.}  This \'etale \((\Z/p)^\times\)--cover of \(\moduli{ell}^{\ord}\), known as the first \index{Igusa tower}Igusa cover, has the following exceptional property:
 
 \begin{lemma}[{\cite[Theorem 2.9.4]{Hida}, \cite[Lemma 5.2]{BehrensConstruction}}]
 For \(p \ge 5\), the moduli \(\moduli{ell}^{\ord}(p)\) is \emph{affine}. \qed
