--- a/main.bib
+++ b/main.bib
@@ -306,6 +306,22 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.1016/S0040-9383(99)00057-9},
 }
 
+@article {AngeltveitLind,
+    AUTHOR = {Angeltveit, Vigleik and Lind, John A.},
+     TITLE = {Uniqueness of {$BP \langle n\rangle$}},
+   JOURNAL = {J. Homotopy Relat. Struct.},
+  FJOURNAL = {Journal of Homotopy and Related Structures},
+    VOLUME = {12},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {17--30},
+      ISSN = {2193-8407},
+   MRCLASS = {55P42 (55S10)},
+  MRNUMBER = {3613020},
+MRREVIEWER = {Agn\`es Beaudry},
+       URL = {https://doi.org/10.1007/s40062-015-0120-0},
+}
+
 @book {Araki,
     AUTHOR = {Araki, Sh\^or\^o},
      TITLE = {Typical formal groups in complex cobordism and {$K$}-theory},
