further mild grammatical corrections

--- a/retrospective.tex
+++ b/retrospective.tex
@@ -52,7 +52,7 @@ could not exist.  He also said he had never fully believed the proof
 but never could find anything wrong with it.  I still don't know how
 he recognized the computation.  What I had drawn was what we now think
 of as the Adams--Novikov spectral sequence for the $K(2)$--localization
-of $\tmf$ and what Mahowald had related it to was a spectrum whose
+of $\tmf$, and what Mahowald had related it to was a spectrum whose
 cohomology is $\mathcal A^* \mmod \mathcal A(2)^*$.
 Technically there wasn't quite a contradiction.  However
 we soon convinced ourselves this spectrum $EO_{2}$ probably did imply
@@ -126,8 +126,8 @@ those results at the 2002 ICM~\cite{HopkinsICMBeijing}.
 
 In the end the homotopy fixed point spectra $E_{d}^{hH}$ turned out to
 have many applications, from the non-existence of Smith-Toda
-complexes, computations in chromatic homotopy theory at low primes and
-even to the Kervaire invariant problem.  But generalizing the whole
+complexes, computations in chromatic homotopy theory at low primes, and
+even to the Kervaire invariant problem.  However, generalizing the whole
 package with the orientation (which after all, was the problem that
 led to $\tmf$) is still quite a mystery.  In the early
 1990s Hovey found an ingenious argument showing that for height $d>2$
