--- a/unknowns.tex
+++ b/unknowns.tex
@@ -96,7 +96,7 @@ As an example of a blueshifting construction, an important observation of Ando, 
 \end{center}
 By shifting this presentation slightly, we highlight an interesting comparison map.  Note that the bottom cell of \(\RP^n_0\) is unattached, and hence there is a natural wrong-way map \[\RP^n_0 \to \S^0.\]  Taking Spanier--Whitehead duals and applying Atiyah's formula, we produce a map \[\S^0 \to D \RP^{(n+1)-1}_{-(0)} = \Susp \RP^{(0)-1}_{-(n+1)} \to \Susp \RP^\infty_{-(n+1)}.\]  Taking the inverse limit gives a map \[\S^0 \to \Susp \RP^\infty_{-\infty},\] and Lin showed this map to be a \(2\)--adic equivalence~\cite{Lin}.\footnote{More generally, Carlsson proved a generalization of this to all other groups, known as the Segal conjecture.}  From the perspective of blueshift, the qualitative form of this is not entirely unexpected: the sphere has infinite chromatic complexity, and so blueshifting it by one stage yields another spectrum of infinite chromatic complexity.  The precise form, however, is quite surprising: we produced exactly the sphere spectrum again!
 
-This alternative presentation of the sphere spectrum as a Tate spectrum yields a filtration spectral sequence \[\pi_* \S^* \Rightarrow \pi_* (S^{-1})^\wedge_2.\]  In terms of this spectral sequence, any stable stem is represented by a (coset of) element(s) on the \(E_1\)--page, and this reverse reading of the spectral sequence is known as the \textit{Mahowald root invariant}~\cite{MahowaldShick}.  The root invariant appears to possess deeply interesting redshifting properties---not wholly surprising, since we are reading a blueshifting construction in reverse.  For instance, the root of \(p\) lies in the \(\alpha\)--family, and the root of an \(\alpha\)--family element lies in the \(\beta\)--family~\cite{BehrensRootInv}.  The root invariant has many striking connections to other areas of topology~\cite{MahowaldRavenel}.
+This alternative presentation of the sphere spectrum as a Tate spectrum yields a filtration spectral sequence \[\pi_* \S^* \Rightarrow \pi_* (\S^{-1})^\wedge_2.\]  In terms of this spectral sequence, any stable stem is represented by a (coset of) element(s) on the \(E_1\)--page, and this reverse reading of the spectral sequence is known as the \textit{Mahowald root invariant}~\cite{MahowaldShick}.  The root invariant appears to possess deeply interesting redshifting properties---not wholly surprising, since we are reading a blueshifting construction in reverse.  For instance, the root of \(p\) lies in the \(\alpha\)--family, and the root of an \(\alpha\)--family element lies in the \(\beta\)--family~\cite{BehrensRootInv}.  The root invariant has many striking connections to other areas of topology~\cite{MahowaldRavenel}.
 
 In addition to the chromatic properties waiting to be explored, the Tate construction itself has some truly puzzling features.  Mahowald's original perspective on the Tate construction was through the definition \[R^{tC_2} := \lim_{n \to \infty} \Susp R \sm P^\infty_{-n},\] whereas the general construction of Greenlees--May~\cite{GreenleesMay}\footnote{Stroilova's PhD thesis~\cite{Stroilova} gives a variation of this construction that converts an \(E(n)\)--local ring spectrum to an \(E(n-k)\)--local ring spectrum.} uses the formula \[R^{tG} = (F(EG_+, R) \sm \widetilde{EG})^G,\] whose pieces in the case at hand consist of \(EG_+ = S(\infty \L)\) and \(\widetilde{EG} = S^{\infty \mathcal L}\), which rearranges to give \[R^{tC_2} := \colim_{m \to \infty} F(P^\infty_{-m}, R).\]  Something quite spooky has happened: a colimit and a limit were inexplicably interchanged in the formulas \[\RP^\infty_{-\infty} = \colim_n \lim_m \RP^n_{-m} = \lim_m \colim_n \RP^n_{-m}.\]  Understanding why these extremely different constructions give the same answer will likely yield some very important background theory.\footnote{There is a superficially related famous problem known as the Telescope Conjecture.  Namely, there are various ``finitary'' flavors of chromatic localization, which are typically less categorically robust but more computable.  They assemble into a diagram:
 \[\begin{array}{ccccc}
