only allow verso->recto display breaks

--- a/sigma.tex
+++ b/sigma.tex
@@ -551,7 +551,7 @@ Make the definitions
 Setting \(f = \mu(u \sm x) A_1 - \mu(x \sm u) A_2\) gives the desired commuting square: \[\sigma \circ f = \beta_j \mu(\alpha \sm \alpha) \circ \Delta.\]
 \end{lemma}
 \begin{proof}
-The idea is to gain control of the cohomology group \(H\Z^4((\CP^\infty)^{\sm 2}, B_j^{\sm 2})\) by Mayer-Vietoris, which is rendered complicated by our simultaneous use of the cofiber sequence \[B_j \to \CP^\infty \to T(\L^{\otimes p^j})\] in \emph{two} factors of a smash product.  Toward this end, consider the maps
+The idea is to gain control of the cohomology group \(H\Z^4((\CP^\infty)^{\sm 2}, B_j^{\sm 2})\) by Mayer-Vietoris, which is rendered complicated by our simultaneous use of the cofiber sequence \(B_j \to \CP^\infty \to T(\L^{\otimes p^j})\) in \emph{two} factors of a smash product.  Toward this end, consider the maps
 \begin{align*}
 B_1\co B_j \sm T(\L^{\otimes p^j}) & \to (\CP^\infty)^{\sm 2} / B_j^{\sm 2}, &
 B_2\co T(\L^{\otimes p^j}) \sm B_j & \to (\CP^\infty)^{\sm 2} / B_j^{\sm 2},
@@ -572,7 +572,7 @@ and hence}
 \intertext{
 The maps \(\alpha\) and \(\delta\) appear in the following map of cofiber sequences:
 \begin{center}
-\begin{tikzcd}[ampersand replacement=\&]
+\begin{tikzcd}[ampersand replacement=\&, row sep=1.5em]
 B \arrow["j"]{r} \arrow["\alpha"]{d} \& P \arrow["q"]{r} \arrow["y"]{d} \& T \arrow["\delta"]{r} \arrow["w"]{d} \& \Susp B \arrow["\alpha"]{d} \\
 \Susp H\Z/p^j \arrow["\beta_j"]{r} \& \Susp^2 H\Z \arrow["p^j"]{r} \& \Susp^2 H\Z \arrow["\rho"]{r} \& \Susp^2 H\Z/p^j,
 \end{tikzcd}
