--- a/characters.tex
+++ b/characters.tex
@@ -16,7 +16,7 @@ E = E_{\Gamma}
 \]
 called height \(d\) Lubin--Tate theory or Morava \(E\)--theory such that
 \[
-BS^1_E = \Spf(E^0(BS^1)) = \G.
+\CP^\infty_E = BS^1_E = \Spf(E^0(BS^1)) = \G.
 \]
 Fixing a coordinate on \(\G\) provides us with a formal group law
 \[
@@ -43,15 +43,15 @@ E^*(BA) \cong E^*\ps{x_1, \ldots, x_{i}}/([m_1]_{\G}(x_1), \ldots, [m_i]_{\G}(x_
 \end{corollary}
 
 
-If \(A \cong C_{p^{k_1}} \times \cdots \times C_{p^{k_i}}\) is an abelian \(p\)-group, it follows that \(E^*(BA)\) is a free \(E^*\)-module of rank \(p^{k_1d+\cdots + k_id}\). If \(m\) is prime to \(p\), then \([m]_{\G}(x)/x\) is a unit in \(E^*\ps{x}\). This implies that the rank of \(E^*(BA)\) only depends on the Sylow \(p\)-subgroup of \(A\).
+If \(A \cong C_{p^{k_1}} \times \cdots \times C_{p^{k_i}}\) is an abelian \(p\)-group, it follows that \(E^*(BA)\) is a free \(E^*\)-module of rank \(p^{k_1d+\cdots + k_id}\). If \(m\) is prime to \(p\), then \([m]_{\G}(x)/x\) is a unit in \(E^*\ps{x}\). This implies that the rank of \(E^*(BA)\) only depends on the Sylow \(p\)-subgroup of \(A\). Even more, it implies that the inclusion of the Sylow \(p\)-subgroup of \(A\) into \(A\) induces an isomorphism after applying $E$-cohomology. We will now always assume that \(A\) is an abelian \(p\)-group.
 
 The most computable of chromatic cohomology theories is periodic rational cohomology. For a \(\Q\)-algebra \(R\), the formal group associated to \(HRP\) is the (height \(0\)) additive formal group. It is natural to want to gain information regarding \(E^*(X)\) (for any chromatic cohomology theory \(E\)) by comparing \(E\)-cohomology with periodic rational cohomology.\footnote{We have employed a similar-sounding strategy elsewhere in this text, where we have approximated an arbitrary complex-orientable theory by \(\HFp P\), using the fact that the infinite-height group \(\G_a \otimes \F_p\) is a dense point in \(\moduli{fg} \times \Spec \Z_{(p)}\).  However, the height \(0\) point \(\G_a \otimes \Q\) is \emph{not} dense, and so our intention here is much more delicate.}  For instance, this is the purpose of the classical Chern character: for \(X\) a space, the Chern character is a map of commutative rings
 \[
-K^0(X) \to H\Q P^0(X)
+\(KU\)^0(X) \to H\Q P^0(X)
 \] 
-induced by the map of spectra\footnote{We could replace \(\Q\) with \(\R\) or \(\C\) and the result would still hold.} \[K \to H\Q \wedge K \simeq H\Q P.\] For \(X\) a finite \(CW\)-complex, it induces an isomorphism
+induced by the map of spectra\footnote{We could replace \(\Q\) with \(\R\) or \(\C\) and the result would still hold.} \[\(KU\) \to H\Q \wedge \(KU\) \simeq H\Q P.\] For \(X\) a finite \(CW\)-complex, it induces an isomorphism
 \[
-\Q \otimes K^0(X) \cong H\Q P^0(X).
+\Q \otimes \(KU\)^0(X) \cong H\Q P^0(X).
 \]
 
 When \(X\) is a finite CW complex, there is an isomorphism
@@ -90,7 +90,7 @@ X_{hG} \simeq EG \times_G X = (EG \times X)/G
 \]
 is the homotopy orbits for the \(G\)-action on \(X\). The resulting equivariant cohomology theory is called \textit{Borel equivariant \(E\)--theory}.
 
-The purpose of this appendix is to explain, in the case of \(E = E_{\Gamma}\), how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes \(X\), to an analogous formula for finite \(G\)--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant \(E\)--cohomology (restricted to finite \(G\)--CW complexes) by some version of Borel equivariant rational cohomology.  In particular, this links back up to our original goal of studying \(E^*(B\Sigma_n)\) by the formula \[E^*(B\Sigma_n) = E_{\Sigma_n}^*((G/G) \times *).\]
+The purpose of this Case Study is to explain, in the case of \(E = E_{\Gamma}\), how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes \(X\), to an analogous formula for finite \(G\)--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant \(E\)--cohomology (restricted to finite \(G\)--CW complexes) by some version of Borel equivariant rational cohomology. We call this ``the approximation problem".  In particular, this links back up to our original goal of studying \(E^*(B\Sigma_n)\) by the formula \[E^*(B\Sigma_n) = E_{\Sigma_n}^*((G/G) \times *).\]
 
 \subsection*{Formal Geometry}
 
@@ -181,7 +181,7 @@ as abelian group schemes, then we would be done, since
 and
 \begin{align*}
 \Spec(R) \times_{\Spec(E^0)} \InternalHom{FormalGroups}(A^*, \G[p^k]) & \cong \InternalHom{FormalGroups}(A^*, \Lambda_{k}^*) \\
-& \cong A^{\times n}.
+& \cong A^{\times d}.
 \end{align*}
 That is, we would be able to give the simplest answer imaginable: we will have approximated \(E^0(BA)\) by the \(HRP\)-cohomology of a collection of points. The purpose of the next section is to construct a \(\Q \otimes E^0\)-algebra \(C_0\) with this property.
 
@@ -365,7 +365,7 @@ to the \(p^k\)--torsion.
 % \end{example}
 
 \begin{example} \label{padicktheory}
-Let us work out \(C_0\) in the case of \(E_{\G_m} = K_p\). In this case 
+Let us work out \(C_0\) in the case of $p$-complete $K$-theory \(E_{\G_m} = \(KU\)_p\). In this case 
 \[
 \G = \G_m,
 \]
@@ -380,7 +380,7 @@ x & \mapsto x-1,
 \end{align*}
 from which we calculate 
 \[
-E^0(B\Lk) = K_{p}^0(B\Z/p^k) \cong \Z_p[x]/([p^k]_{\G_m}(x)) \cong \Z_p[x]/(x^{p^k}-1).
+E^0(B\Lk) = \(KU\)_{p}^0(B\Z/p^k) \cong \Z_p[x]/([p^k]_{\G_m}(x)) \cong \Z_p[x]/(x^{p^k}-1).
 \]
 We have
 \[
@@ -399,9 +399,9 @@ where \(\Phi_{p^i}(x)\) is the \(p^i\)th cyclotomic polynomial. But
 \[
 x^{p^{k-1}}-1 = \prod_{i=1,\ldots,(k-1)}\Phi_{p^i}(x)
 \]
-and this is one of the elements in \(S_k\). Clearly it is a zero-divisor in \(K_{p}^0(B\Z/p^k)\), thus
+and this is one of the elements in \(S_k\). Clearly it is a zero-divisor in \(\(KU\)_{p}^0(B\Z/p^k)\), thus
 \[
-S_{k}^{-1}K_{p}^0(B\Z/p^k) \cong S_{k}^{-1}\Z_p[x]/(\Phi_{p^k}(x)).
+S_{k}^{-1}\(KU\)_{p}^0(B\Z/p^k) \cong S_{k}^{-1}\Z_p[x]/(\Phi_{p^k}(x)).
 \]
 
 We can also see that inverting the elements of \(S_{k}\) inverts \(p\). It suffices to show that the ideal generated by \(p\) in \(S_{k}^{-1}\Z_p[x]/(\Phi_{p^k}(x))\) is the whole ring. Recall the identity of cyclotomic polynomials 
@@ -895,7 +895,7 @@ This is the same as the map \(C_0 \otimes_{E^0(B\Lk)} u^*\) built far above.
 \begin{example}
 When \(n=1\) and \(X = *\) the character map produces a \(p\)--complete version of the classical character map from representation theory that is due to Adams~\cite[Section 2]{AdamsClassifyingSpacesII}). The map takes the form
 \[
-K_{p}^{0}(BG) \xrightarrow{} \mathrm{Cl}(G_{p}^{1}, C_0),
+\(KU\)_{p}^{0}(BG) \xrightarrow{} \mathrm{Cl}(G_{p}^{1}, C_0),
 \]
 where \(C_0\) is the maximal ramified extension of \(\Q_p\) discussed in \Cref{padicktheory}.  This map is injective.  Above height \(1\), though, this is not generally true~\cite{Kriz}, but it \emph{is} true for $G = \Sigma_n$~\cite[Theorem 7.3]{HKR}, which is enough to conclude that $E^0 B\Sigma_n$ is free of finite rank.\todo{Did I get this right?}
 \end{example}
